Add error and loading view state standalone components, add them to list of orders component

--- a/src/app/features/shepherds-view/components/list-of-orders/list-of-orders.component.html
+++ b/src/app/features/shepherds-view/components/list-of-orders/list-of-orders.component.html
@@ -25,3 +25,5 @@
     <mat-row *matRowDef="let row; columns: displayedColumns" mat-row></mat-row>
 </mat-table>
 
+<omega-loading-state *ngIf="viewState === ViewState.LOADING"></omega-loading-state>
+<omega-error-state *ngIf="viewState === ViewState.ERROR"></omega-error-state>
