--- a/src/app/features/shepherds-view/components/list-of-orders/list-of-orders.component.html
+++ b/src/app/features/shepherds-view/components/list-of-orders/list-of-orders.component.html
@@ -16,7 +16,7 @@
 
     <ng-container [matColumnDef]="DisplayedColumn.DETAILS">
         <mat-header-cell *matHeaderCellDef mat-header-cell></mat-header-cell>
-        <mat-cell *matCellDef mat-cell>
+        <mat-cell *matCellDef="let order" (click)="showOrderDetails(order)" mat-cell>
             <button color="primary" mat-raised-button i18n>Show details</button>
         </mat-cell>
     </ng-container>
