--- a/src/app/features/shepherds-view/components/filters/filters.component.scss
+++ b/src/app/features/shepherds-view/components/filters/filters.component.scss
@@ -1,7 +1,13 @@
+@use 'src/assets/styles/colors' as *;
+
 .mat-form-field {
     margin-right: 20px;
 
     &:last-of-type {
         margin-right: 40px;
     }
+}
+
+.mat-option:not(:last-of-type) {
+    border-bottom: 1px solid $color-dark-white;
 }
