--- a/src/app/features/clients-view/clients-view.component.scss
+++ b/src/app/features/clients-view/clients-view.component.scss
@@ -2,3 +2,12 @@
     width: 100%;
     padding: 20px 0;
 }
+
+.main {
+    display: flex;
+}
+
+.section {
+    width: 100%;
+    max-width: 50%;
+}
