--- a/src/app/components/error-state/error-state.component.scss
+++ b/src/app/components/error-state/error-state.component.scss
@@ -8,7 +8,7 @@
 }
 
 .icon-warning, .warning-text {
-    font-size: 36px;
+    font-size: 32px;
     color: $color-red;
 }
 
@@ -20,5 +20,6 @@
 .warning-text {
     font-weight: bold;
     margin: 0 0 0 20px;
-    line-height: 30px;
+    line-height: 40px;
+    text-align: center;
 }
