--- a/src/app/features/clients-view/clients-view.component.scss
+++ b/src/app/features/clients-view/clients-view.component.scss
@@ -5,9 +5,21 @@
 
 .main {
     display: flex;
+    justify-content: space-between;
+    padding: 30px 0 20px;
 }
 
 .section {
     width: 100%;
-    max-width: 50%;
+    max-width: 48%;
+}
+
+@media screen and (max-width: 768px) {
+    .main {
+        flex-direction: column;
+    }
+
+    .section {
+        max-width: initial;
+    }
 }
