Add visual improvements on shepherd's view

--- a/src/app/features/shepherds-view/components/filters/filters.component.scss
+++ b/src/app/features/shepherds-view/components/filters/filters.component.scss
@@ -11,3 +11,8 @@
 .mat-option:not(:last-of-type) {
     border-bottom: 1px solid $color-dark-white;
 }
+
+.filters-heading {
+    font-size: 26px;
+    font-weight: 500;
+}
