--- a/src/app/features/shepherds-view/components/order-details/order-details.component.scss
+++ b/src/app/features/shepherds-view/components/order-details/order-details.component.scss
@@ -72,6 +72,10 @@
     text-align: right;
 }
 
+.price {
+    color: $color-green;
+}
+
 @media screen and (max-width: 768px) {
     ::ng-deep {
         .order-details-panel-class {
