--- a/src/app/features/shepherds-view/shepherds-view.component.html
+++ b/src/app/features/shepherds-view/shepherds-view.component.html
@@ -2,4 +2,6 @@
     <omega-back-to-dashboard-button></omega-back-to-dashboard-button>
 </header>
 
-<omega-list-of-orders></omega-list-of-orders>
+<main class="main">
+    <omega-list-of-orders></omega-list-of-orders>
+</main>
