Change column name from 'Total amount' to 'Ordered products' on list of orders component

--- a/src/app/features/shepherds-view/components/list-of-orders/list-of-orders.component.html
+++ b/src/app/features/shepherds-view/components/list-of-orders/list-of-orders.component.html
@@ -20,7 +20,7 @@
         </ng-container>
 
         <ng-container [matColumnDef]="DisplayedColumn.AMOUNT">
-            <mat-header-cell *matHeaderCellDef class="header-cell" mat-header-cell i18n>Total amount:</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef class="header-cell" mat-header-cell i18n>Ordered products:</mat-header-cell>
             <mat-cell *matCellDef="let order" mat-cell>
                 <p class="ellipsis">{{ order.totalAmount }}</p>
             </mat-cell>
