Fix i18n translations having spaces or new lines in translated text

--- a/src/app/features/clients-view/components/make-an-order/make-an-order.component.html
+++ b/src/app/features/clients-view/components/make-an-order/make-an-order.component.html
@@ -203,7 +203,6 @@
     class="save-order-button"
     color="primary"
     mat-raised-button
-    i18n
 >
-    Save your order
+    <ng-container i18n>Save your order</ng-container>
 </button>
