--- a/src/app/features/clients-view/components/summary/components/success-infobar/success-infobar.component.html
+++ b/src/app/features/clients-view/components/summary/components/success-infobar/success-infobar.component.html
@@ -10,7 +10,6 @@
     class="button"
     color="primary"
     mat-stroked-button
-    i18n
 >
-    Go back to dashboard.
+    <ng-container i18n>Go back to dashboard</ng-container>
 </button>
