--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -4,17 +4,15 @@
         class="button"
         color="primary"
         mat-raised-button
-        i18n
     >
-        Client's view
+        <ng-container i18n>Client's view</ng-container>
     </button>
     <button
         (click)="navigateToShepherdsView()"
         class="button"
         color="primary"
         mat-raised-button
-        i18n
     >
-        Shepherd's view
+        <ng-container i18n>Shepherd's view</ng-container>
     </button>
 </section>
