--- a/src/app/features/shepherds-view/components/filters/filters.component.html
+++ b/src/app/features/shepherds-view/components/filters/filters.component.html
@@ -27,8 +27,7 @@
         (click)="resetFilters()"
         color="primary"
         mat-raised-button
-        i18n
     >
-        Reset Filters
+        <ng-container i18n>Reset Filters</ng-container>
     </button>
 </form>
